--- a/src/promptflow/tests/test_configs/connections/openai_connection_base_url.yaml
+++ b/src/promptflow/tests/test_configs/connections/openai_connection_base_url.yaml
@@ -3,4 +3,4 @@ name: my_open_ai_connection
 type: open_ai
 api_key: "<to-be-replaced>"
 organization: "org"
-api_base: custom_api_base
+base_url: custom_base_url
