--- a/.github/workflows/promptflow-sdk-pfs-e2e-test.yml
+++ b/.github/workflows/promptflow-sdk-pfs-e2e-test.yml
@@ -1,43 +1,31 @@
 name: promptflow-sdk-pfs-e2e-test
+
 on:
-  schedule:
-    - cron: "40 18 * * *" # Every day starting at 2:40 BJT
-  pull_request_target:
+  pull_request:
     paths:
       - src/promptflow/**
       - scripts/**
-      - '**promptflow-sdk-pfs-e2e-test.yml'
+      - .github/workflows/promptflow-sdk-pfs-e2e-test.yml
+
   workflow_dispatch:
+
 env:
   packageSetupType: promptflow_with_extra
   testWorkingDirectory: ${{ github.workspace }}/src/promptflow
   PYTHONPATH: ${{ github.workspace }}/src/promptflow
   IS_IN_CI_PIPELINE: "true"
+
 jobs:
-  authorize:
-    environment:
-      # forked prs from pull_request_target will be run in external environment, domain prs will be run in internal environment
-      ${{ github.event_name == 'pull_request_target' &&
-      github.event.pull_request.head.repo.full_name != github.repository &&
-      'external' || 'internal' }}
-    runs-on: ubuntu-latest
-    steps:
-      - run: true
   sdk_pfs_e2e_test:
-    needs: authorize
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
       uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.head.sha || github.ref }}
-        fetch-depth: 0
-    - name: merge main to current branch
-      uses: "./.github/actions/step_merge_main"
+
     - name: Display and Set Environment Variables
       run: |
         if [ "ubuntu-latest" == "${{ matrix.os }}" ]; then
@@ -51,26 +39,22 @@ jobs:
         env | sort >> $GITHUB_OUTPUT
       id: display_env
       shell: bash -el {0}
+
     - name: Conda Setup - ${{ matrix.os }} - Python Version ${{ steps.display_env.outputs.pyVersion }}
       uses: "./.github/actions/step_create_conda_environment"
       with:
         pythonVersion: ${{ steps.display_env.outputs.pyVersion }}
+
     - name: Build wheel
       uses: "./.github/actions/step_sdk_setup"
       with:
         setupType: ${{ env.packageSetupType }}
         scriptPath: ${{ env.testWorkingDirectory }}
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-    - name: Generate Configs
-      uses: "./.github/actions/step_generate_configs"
-      with:
-        targetFolder: ${{ env.testWorkingDirectory }}
+
     - name: Get number of CPU cores
       uses: SimenB/github-actions-cpu-cores@v1
       id: cpu-cores
+
     - name: Run Test
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
@@ -84,6 +68,7 @@ jobs:
           -m "e2etest" `
           -n ${{ steps.cpu-cores.outputs.count }} `
           --coverage-config ${{ github.workspace }}/src/promptflow/tests/sdk_pfs_test/.coveragerc
+
     - name: Upload pytest test results
       if: always()
       uses: actions/upload-artifact@v3
@@ -92,6 +77,7 @@ jobs:
         path: |
           ${{ env.testWorkingDirectory }}/*.xml
           ${{ env.testWorkingDirectory }}/htmlcov/
+
   publish-test-results:
     name: "Publish Tests Results"
     needs: sdk_pfs_e2e_test
@@ -101,9 +87,8 @@ jobs:
 
     steps:
       - name: checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha || github.ref }}
+        uses: actions/checkout@v4
+
       - name: Publish Test Results
         uses: "./.github/actions/step_publish_test_results"
         with:
