--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -64,7 +64,11 @@ jobs:
           $text = Get-Content "promptflow.wixproj" -Raw
           $text = $text -replace '\$\((env\.CLI_VERSION)\)', ${{ steps.get-version.outputs.version }}
           $text | Out-File -FilePath "promptflow.wixproj" -Encoding utf8
-          $env:CLI_VERSION = ${{ steps.get-version.outputs.version }}
+          
+          $text = Get-Content "promptflow.wxs" -Raw
+          $text = $text -replace '\$\((env\.CLI_VERSION)\)', ${{ steps.get-version.outputs.version }}
+          $text | Out-File -FilePath "promptflow.wxs" -Encoding utf8
+          
           msbuild /t:rebuild /p:Configuration=Release /p:Platform=x64 promptflow.wixproj
         shell: pwsh
 
