--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           echo "Version from promptflow: ${{ steps.get-version.outputs.version }}"
           $text = Get-Content "version_info.txt" -Raw
-          $text = $text -replace '\$\((env\.CLI_VERSION)\)', ${{ steps.get-version.outputs.version }}
+          $text = $text -replace '\$\((env\.CLI_VERSION)\)', '${{ steps.get-version.outputs.version }}'
           $text | Out-File -FilePath "version_info.txt" -Encoding utf8
           pyinstaller promptflow.spec
         shell: pwsh
@@ -62,12 +62,12 @@ jobs:
         working-directory: ${{ github.workspace }}/scripts/installer/windows
         run: |
           $text = Get-Content "promptflow.wixproj" -Raw
-          $text = $text -replace '\$\((env\.CLI_VERSION)\)', ${{ steps.get-version.outputs.version }}
+          $text = $text -replace '\$\((env\.CLI_VERSION)\)', '${{ steps.get-version.outputs.version }}'
           $text | Out-File -FilePath "promptflow.wixproj" -Encoding utf8
           
           $text = Get-Content "product.wxs" -Raw
-          $text = $text -replace '\$\((env\.CLI_VERSION)\)', ${{ steps.get-version.outputs.version }}
-          $text | Out-File -FilePath "product.wxs" -Encoding utf8
+          $text = $text -replace '\$\((env\.CLI_VERSION)\)', '${{ steps.get-version.outputs.version }}'
+          $text | Out-File -FilePath "product.wxs" -Encoding utf8         
           
           msbuild /t:rebuild /p:Configuration=Release /p:Platform=x64 promptflow.wixproj
         shell: pwsh
