--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -77,3 +77,17 @@ jobs:
         with:
           name: msi-artifact
           path: scripts/installer/windows/out/*.msi
+
+      - name: Install Azure CLI
+        uses: azure/setup-azure-cli@v1
+
+      - name: Upload to Azure Storage
+        env:
+          AZURE_STORAGE_ACCOUNT_NAME: promptflowartifact
+          AZURE_CONTAINER_NAME: msi-installer
+        run: |
+          az storage blob upload \
+            --account-name $AZURE_STORAGE_ACCOUNT_NAME \
+            --container-name $AZURE_CONTAINER_NAME \
+            --file scripts/installer/windows/out/*.msi \
+            --name chenyin_test
