--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -84,8 +84,6 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Upload to Azure Storage
-        env:
-          AZURE_STORAGE_ACCOUNT_NAME: promptflowartifact
-          AZURE_CONTAINER_NAME: msi-installer
         run: |
-          az storage blob upload --account-name $AZURE_STORAGE_ACCOUNT_NAME --container-name $AZURE_CONTAINER_NAME --file scripts/installer/windows/out/*.msi  --name chenyin_test
+          az storage blob upload --account-name promptflowartifact --container-name msi-installer --file scripts/installer/windows/out/*.msi  --name chenyin_test
+        shell: pwsh
