--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -80,5 +80,5 @@ jobs:
       - name: Upload to Azure Storage
         run: |
           $msi_file = Get-ChildItem -Path 'scripts/installer/windows/out/' -Filter *.msi
-          az storage blob upload --account-name promptflowartifact --container-name msi-installer --file scripts/installer/windows/out/$msi_file  --name $msi_file --overwrite
+          az storage blob upload --account-name promptflowartifact --container-name msi-installer --file scripts/installer/windows/out/$($msi_file.Name)  --name $($msi_file.Name) --overwrite
         shell: pwsh
