--- a/src/promptflow/tests/test_configs/recordings/test_flow_operations_TestFlow_test_create_flow.yaml
+++ b/src/promptflow/tests/test_configs/recordings/test_flow_operations_TestFlow_test_create_flow.yaml
@@ -39,7 +39,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.086'
+      - '0.022'
     status:
       code: 200
       message: OK
@@ -91,7 +91,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.636'
+      - '0.725'
     status:
       code: 200
       message: OK
@@ -143,7 +143,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.104'
+      - '0.219'
     status:
       code: 200
       message: OK
@@ -204,7 +204,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:06:57 GMT
+      - Wed, 15 Nov 2023 10:00:35 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -220,7 +220,7 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>ResourceAlreadyExists</Code><Message>The
-        specified resource already exists.\nRequestId:d6df0949-a01a-0073-72a3-17551f000000\nTime:2023-11-15T09:06:58.9384684Z</Message></Error>"
+        specified resource already exists.\nRequestId:d7903ed1-a01a-00b8-6daa-17564a000000\nTime:2023-11-15T10:00:36.8415910Z</Message></Error>"
     headers:
       content-length:
       - '228'
@@ -249,7 +249,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:00 GMT
+      - Wed, 15 Nov 2023 10:00:38 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -265,7 +265,7 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>ResourceAlreadyExists</Code><Message>The
-        specified resource already exists.\nRequestId:446cc89f-101a-00df-76a3-1746b6000000\nTime:2023-11-15T09:07:01.1305770Z</Message></Error>"
+        specified resource already exists.\nRequestId:fe100d5e-801a-0064-3aaa-17fc14000000\nTime:2023-11-15T10:00:39.5517871Z</Message></Error>"
     headers:
       content-length:
       - '228'
@@ -294,7 +294,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:01 GMT
+      - Wed, 15 Nov 2023 10:00:39 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -310,7 +310,7 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>ResourceAlreadyExists</Code><Message>The
-        specified resource already exists.\nRequestId:2e55f067-001a-0107-3aa3-179fe2000000\nTime:2023-11-15T09:07:02.2773433Z</Message></Error>"
+        specified resource already exists.\nRequestId:089de0e3-201a-001f-0baa-17be88000000\nTime:2023-11-15T10:00:40.7041346Z</Message></Error>"
     headers:
       content-length:
       - '228'
@@ -339,7 +339,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:02 GMT
+      - Wed, 15 Nov 2023 10:00:40 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -355,7 +355,7 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>ResourceAlreadyExists</Code><Message>The
-        specified resource already exists.\nRequestId:9887e33b-501a-0077-42a3-17d818000000\nTime:2023-11-15T09:07:03.3228354Z</Message></Error>"
+        specified resource already exists.\nRequestId:ba9e296c-601a-0098-40aa-172ded000000\nTime:2023-11-15T10:00:41.7948069Z</Message></Error>"
     headers:
       content-length:
       - '228'
@@ -382,7 +382,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:03 GMT
+      - Wed, 15 Nov 2023 10:00:41 GMT
       x-ms-version:
       - '2023-08-03'
     method: GET
@@ -390,7 +390,7 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>ResourceNotFound</Code><Message>The
-        specified resource does not exist.\nRequestId:9887e33e-501a-0077-43a3-17d818000000\nTime:2023-11-15T09:07:03.5010518Z</Message></Error>"
+        specified resource does not exist.\nRequestId:ba9e2971-601a-0098-41aa-172ded000000\nTime:2023-11-15T10:00:41.9670490Z</Message></Error>"
     headers:
       content-length:
       - '223'
@@ -419,7 +419,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:03 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -439,19 +439,19 @@ interactions:
       content-length:
       - '0'
       last-modified:
-      - Wed, 15 Nov 2023 09:07:03 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Directory
       x-ms-file-change-time:
-      - '2023-11-15T09:07:03.6812346Z'
+      - '2023-11-15T10:00:42.1399746Z'
       x-ms-file-creation-time:
-      - '2023-11-15T09:07:03.6812346Z'
+      - '2023-11-15T10:00:42.1399746Z'
       x-ms-file-id:
-      - '11529348473522487296'
+      - '11529317687196909568'
       x-ms-file-last-write-time:
-      - '2023-11-15T09:07:03.6812346Z'
+      - '2023-11-15T10:00:42.1399746Z'
       x-ms-file-parent-id:
       - '13835172894117724160'
       x-ms-request-server-encrypted:
@@ -475,9 +475,9 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-content-length:
-      - '1071'
+      - '1040'
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:03 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -499,21 +499,21 @@ interactions:
       content-length:
       - '0'
       last-modified:
-      - Wed, 15 Nov 2023 09:07:03 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-15T09:07:03.8674157Z'
+      - '2023-11-15T10:00:42.3331245Z'
       x-ms-file-creation-time:
-      - '2023-11-15T09:07:03.8674157Z'
+      - '2023-11-15T10:00:42.3331245Z'
       x-ms-file-id:
-      - '16141034491949875200'
+      - '16141003705624297472'
       x-ms-file-last-write-time:
-      - '2023-11-15T09:07:03.8674157Z'
+      - '2023-11-15T10:00:42.3331245Z'
       x-ms-file-parent-id:
-      - '11529348473522487296'
+      - '11529317687196909568'
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -522,20 +522,20 @@ interactions:
       code: 201
       message: Created
 - request:
-    body: "import bs4\r\nimport requests\r\n\r\nfrom promptflow import tool\r\n\r\n\r\n@tool\r\ndef
-      fetch_text_content_from_url(url: str):\r\n    # Send a request to the URL\r\n
-      \   try:\r\n        # time.sleep(130)\r\n        headers = {\r\n            \"User-Agent\":
+    body: "import bs4\nimport requests\n\nfrom promptflow import tool\n\n\n@tool\ndef
+      fetch_text_content_from_url(url: str):\n    # Send a request to the URL\n    try:\n
+      \       # time.sleep(130)\n        headers = {\n            \"User-Agent\":
       \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like
-      Gecko) \"\r\n            \"Chrome/113.0.0.0 Safari/537.36 Edg/113.0.1774.35\"\r\n
-      \       }\r\n        response = requests.get(url, headers=headers)\r\n        if
-      response.status_code == 200:\r\n            # Parse the HTML content using BeautifulSoup\r\n
-      \           soup = bs4.BeautifulSoup(response.text, \"html.parser\")\r\n            soup.prettify()\r\n
-      \           return soup.get_text()[:2000]\r\n        else:\r\n            msg
-      = (\r\n                f\"Get url failed with status code {response.status_code}.\\nURL:
-      {url}\\nResponse: \"\r\n                f\"{response.text[:100]}\"\r\n            )\r\n
-      \           print(msg)\r\n            return \"No available content\"\r\n    except
-      Exception as e:\r\n        print(\"Get url failed with error: {}\".format(e))\r\n
-      \       return \"No available content\"\r\n"
+      Gecko) \"\n            \"Chrome/113.0.0.0 Safari/537.36 Edg/113.0.1774.35\"\n
+      \       }\n        response = requests.get(url, headers=headers)\n        if
+      response.status_code == 200:\n            # Parse the HTML content using BeautifulSoup\n
+      \           soup = bs4.BeautifulSoup(response.text, \"html.parser\")\n            soup.prettify()\n
+      \           return soup.get_text()[:2000]\n        else:\n            msg =
+      (\n                f\"Get url failed with status code {response.status_code}.\\nURL:
+      {url}\\nResponse: \"\n                f\"{response.text[:100]}\"\n            )\n
+      \           print(msg)\n            return \"No available content\"\n    except
+      Exception as e:\n        print(\"Get url failed with error: {}\".format(e))\n
+      \       return \"No available content\"\n"
     headers:
       Accept:
       - application/xml
@@ -544,17 +544,17 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '1071'
+      - '1040'
       Content-MD5:
-      - zieNMYwaanDWmxfoA9SvAQ==
+      - j7+N6tqiR54AYXimiIeL/g==
       Content-Type:
       - application/octet-stream
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:03 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       x-ms-range:
-      - bytes=0-1070
+      - bytes=0-1039
       x-ms-version:
       - '2023-08-03'
       x-ms-write:
@@ -568,13 +568,13 @@ interactions:
       content-length:
       - '0'
       content-md5:
-      - zieNMYwaanDWmxfoA9SvAQ==
+      - j7+N6tqiR54AYXimiIeL/g==
       last-modified:
-      - Wed, 15 Nov 2023 09:07:04 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-last-write-time:
-      - '2023-11-15T09:07:04.0526013Z'
+      - '2023-11-15T10:00:42.5103456Z'
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -598,7 +598,7 @@ interactions:
       x-ms-content-length:
       - '545'
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:04 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       x-ms-file-attributes:
       - none
       x-ms-file-creation-time:
@@ -620,21 +620,21 @@ interactions:
       content-length:
       - '0'
       last-modified:
-      - Wed, 15 Nov 2023 09:07:04 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-15T09:07:04.2397783Z'
+      - '2023-11-15T10:00:42.6875662Z'
       x-ms-file-creation-time:
-      - '2023-11-15T09:07:04.2397783Z'
+      - '2023-11-15T10:00:42.6875662Z'
       x-ms-file-id:
-      - '10376426968915640320'
+      - '10376396182590062592'
       x-ms-file-last-write-time:
-      - '2023-11-15T09:07:04.2397783Z'
+      - '2023-11-15T10:00:42.6875662Z'
       x-ms-file-parent-id:
-      - '11529348473522487296'
+      - '11529317687196909568'
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -665,7 +665,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:04 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       x-ms-range:
       - bytes=0-544
       x-ms-version:
@@ -683,11 +683,11 @@ interactions:
       content-md5:
       - DI3RczYyi0rXCwdOaKJh8w==
       last-modified:
-      - Wed, 15 Nov 2023 09:07:04 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-last-write-time:
-      - '2023-11-15T09:07:04.4239683Z'
+      - '2023-11-15T10:00:42.8687687Z'
       x-ms-request-server-encrypted:
       - 'true'
       x-ms-version:
@@ -717,13 +717,13 @@ interactions:
     uri: https://eastus.api.azureml.ms/flow/api/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/Flows
   response:
     body:
-      string: '{"eTag": {}, "flowId": "7bde7cc6-fae2-4dd0-85bc-0fd6c7079a67", "flowName":
+      string: '{"eTag": {}, "flowId": "e68edf0b-bccb-4821-889a-0708d9ae77ea", "flowName":
         "flow_display_name", "description": "test flow", "tags": {"owner": "sdk"},
         "flowType": "Default", "experimentId": "3e123da1-f9a5-4c91-9234-8d9ffbb39ff5",
-        "createdDate": "2023-11-15T09:07:07.5166016Z", "lastModifiedDate": "2023-11-15T09:07:07.5166017Z",
+        "createdDate": "2023-11-15T10:00:45.6325471Z", "lastModifiedDate": "2023-11-15T10:00:45.6325472Z",
         "owner": {"userObjectId": "dccfa7b6-87c6-4f1e-af43-555f876e37a7", "userTenantId":
         "00000000-0000-0000-0000-000000000000", "userName": "Zhengfei Wang"}, "flowResourceId":
-        "azureml://locations/eastus/workspaces/00000/flows/7bde7cc6-fae2-4dd0-85bc-0fd6c7079a67",
+        "azureml://locations/eastus/workspaces/00000/flows/e68edf0b-bccb-4821-889a-0708d9ae77ea",
         "isArchived": false, "flowDefinitionFilePath": "Users/unknown_user/promptflow/flow_display_name/flow.dag.yaml"}'
     headers:
       connection:
@@ -741,7 +741,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '1.063'
+      - '0.822'
     status:
       code: 200
       message: OK
@@ -757,7 +757,7 @@ interactions:
       User-Agent:
       - azsdk-python-storage-file-share/12.14.0 Python/3.10.13 (Windows-10-10.0.22631-SP0)
       x-ms-date:
-      - Wed, 15 Nov 2023 09:07:07 GMT
+      - Wed, 15 Nov 2023 10:00:45 GMT
       x-ms-version:
       - '2023-08-03'
     method: HEAD
@@ -771,21 +771,21 @@ interactions:
       content-type:
       - application/octet-stream
       last-modified:
-      - Wed, 15 Nov 2023 09:07:04 GMT
+      - Wed, 15 Nov 2023 10:00:42 GMT
       server:
       - Windows-Azure-File/1.0 Microsoft-HTTPAPI/2.0
       x-ms-file-attributes:
       - Archive
       x-ms-file-change-time:
-      - '2023-11-15T09:07:04.4239683Z'
+      - '2023-11-15T10:00:42.8687687Z'
       x-ms-file-creation-time:
-      - '2023-11-15T09:07:04.2397783Z'
+      - '2023-11-15T10:00:42.6875662Z'
       x-ms-file-id:
-      - '10376426968915640320'
+      - '10376396182590062592'
       x-ms-file-last-write-time:
-      - '2023-11-15T09:07:04.4239683Z'
+      - '2023-11-15T10:00:42.8687687Z'
       x-ms-file-parent-id:
-      - '11529348473522487296'
+      - '11529317687196909568'
       x-ms-type:
       - File
       x-ms-version:
